nodejs/nodejs-guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: devlocal-frontenddb.gpls.pro
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs-guestbook-frontend
          servicePort: 80
